// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccordianCore > renders correct HTML structure with all props set 1`] = `
"<div class="display-accordian extra-class">
  <div class="expanding-panel-classic accordian-item" icon-size="medium">
    <details class="expanding-panel-classic-details" name="snapshot-accordian">
      <summary id="id-snapshot-accordian-trigger" class="expanding-panel-classic-summary" aria-controls="id-snapshot-accordian-content" aria-expanded="false">
        <div class="label-wrapper"></div>
        <div class="icon-wrapper"><span class="iconify i-bi:caret-down-fill icon" aria-hidden="true"></span></div>
      </summary>
    </details>
    <div id="id-snapshot-accordian-content" class="expanding-panel-classic-content" aria-labelledby="id-snapshot-accordian-trigger" role="region">
      <div class="inner"></div>
    </div>
  </div>
  <div class="expanding-panel-classic accordian-item" icon-size="medium">
    <details class="expanding-panel-classic-details" name="snapshot-accordian">
      <summary id="id-snapshot-accordian-trigger" class="expanding-panel-classic-summary" aria-controls="id-snapshot-accordian-content" aria-expanded="false">
        <div class="label-wrapper"></div>
        <div class="icon-wrapper"><span class="iconify i-bi:caret-down-fill icon" aria-hidden="true"></span></div>
      </summary>
    </details>
    <div id="id-snapshot-accordian-content" class="expanding-panel-classic-content" aria-labelledby="id-snapshot-accordian-trigger" role="region">
      <div class="inner"></div>
    </div>
  </div>
  <div class="expanding-panel-classic accordian-item" icon-size="medium">
    <details class="expanding-panel-classic-details" name="snapshot-accordian">
      <summary id="id-snapshot-accordian-trigger" class="expanding-panel-classic-summary" aria-controls="id-snapshot-accordian-content" aria-expanded="false">
        <div class="label-wrapper"></div>
        <div class="icon-wrapper"><span class="iconify i-bi:caret-down-fill icon" aria-hidden="true"></span></div>
      </summary>
    </details>
    <div id="id-snapshot-accordian-content" class="expanding-panel-classic-content" aria-labelledby="id-snapshot-accordian-trigger" role="region">
      <div class="inner"></div>
    </div>
  </div>
</div>"
`;

exports[`AccordianCore > renders correct HTML structure with default props 1`] = `
"<div class="display-accordian">
  <div class="expanding-panel-classic accordian-item" icon-size="medium">
    <details class="expanding-panel-classic-details" name="v-0-0-0">
      <summary id="id-v-0-0-0-trigger" class="expanding-panel-classic-summary" aria-controls="id-v-0-0-0-content" aria-expanded="false">
        <div class="label-wrapper"></div>
        <div class="icon-wrapper"><span class="iconify i-bi:caret-down-fill icon" aria-hidden="true"></span></div>
      </summary>
    </details>
    <div id="id-v-0-0-0-content" class="expanding-panel-classic-content" aria-labelledby="id-v-0-0-0-trigger" role="region">
      <div class="inner"></div>
    </div>
  </div>
  <div class="expanding-panel-classic accordian-item" icon-size="medium">
    <details class="expanding-panel-classic-details" name="v-0-0-1">
      <summary id="id-v-0-0-1-trigger" class="expanding-panel-classic-summary" aria-controls="id-v-0-0-1-content" aria-expanded="false">
        <div class="label-wrapper"></div>
        <div class="icon-wrapper"><span class="iconify i-bi:caret-down-fill icon" aria-hidden="true"></span></div>
      </summary>
    </details>
    <div id="id-v-0-0-1-content" class="expanding-panel-classic-content" aria-labelledby="id-v-0-0-1-trigger" role="region">
      <div class="inner"></div>
    </div>
  </div>
</div>"
`;

exports[`AccordianCore > renders correct HTML structure with populated slots 1`] = `
"<div class="display-accordian">
  <div class="expanding-panel-classic accordian-item" icon-size="medium">
    <details class="expanding-panel-classic-details" name="v-0-0-0">
      <summary id="id-v-0-0-0-trigger" class="expanding-panel-classic-summary" aria-controls="id-v-0-0-0-content" aria-expanded="false">
        <div class="label-wrapper"><span>Summary 0</span></div>
        <div class="icon-wrapper"><span>Icon 0</span></div>
      </summary>
    </details>
    <div id="id-v-0-0-0-content" class="expanding-panel-classic-content" aria-labelledby="id-v-0-0-0-trigger" role="region">
      <div class="inner"><span>Content 0</span></div>
    </div>
  </div>
  <div class="expanding-panel-classic accordian-item" icon-size="medium">
    <details class="expanding-panel-classic-details" name="v-0-0-1">
      <summary id="id-v-0-0-1-trigger" class="expanding-panel-classic-summary" aria-controls="id-v-0-0-1-content" aria-expanded="false">
        <div class="label-wrapper"><span>Summary 1</span></div>
        <div class="icon-wrapper"><span>Icon 1</span></div>
      </summary>
    </details>
    <div id="id-v-0-0-1-content" class="expanding-panel-classic-content" aria-labelledby="id-v-0-0-1-trigger" role="region">
      <div class="inner"><span>Content 1</span></div>
    </div>
  </div>
</div>"
`;

exports[`AccordianCore > renders correctly with zero items 1`] = `"<div class="display-accordian"></div>"`;
